--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "start_url": ".",
     "icons": [
         {
-            "src": "img/nana32_256x256.png",
+            "src": "img/icon.png",
             "sizes": "256x256",
             "type": "image/png"
         }
